--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1125,7 +1125,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s66NE1yDv7 {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 60px;
   background-color: #f9f9f9;
 }
@@ -1186,5 +1186,5 @@ section.lazy-placeholder:after {
 .cid-s67peN5p9A {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #232323;
 }
