--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1589,11 +1589,12 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-s6a6yvqfg9 {
-  background: #ffffff;
+  background: #232323;
+  padding-top: 90px;
+  padding-bottom: 60px;
 }
 .cid-s6a6yvqfg9 .video-block {
   margin: auto;
-  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-s6a6yvqfg9 .video-block {
@@ -1602,10 +1603,11 @@ section.lazy-placeholder:after {
 }
 .cid-s68dgbHXdB {
   background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .cid-s68dgbHXdB .video-block {
   margin: auto;
-  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-s68dgbHXdB .video-block {
@@ -1613,11 +1615,12 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s69VJsYRsT {
-  background: #ffffff;
+  background: #232323;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .cid-s69VJsYRsT .video-block {
   margin: auto;
-  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-s69VJsYRsT .video-block {
